Fusionne les modifications q->sigma_perp effacées à la révision précédente Syntaxe des citations Notes et remarques de la réunion intro du jour: - membrane -> thin tissues (epithelimum, endothelium)

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -33,15 +33,15 @@ amsmath,amssymb,prl]{revtex4-1}
 \maketitle
 
 \section*{Introduction}
-There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate, the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength, as discovered originally in aeronautics [Gough1940, Bijlaard1946]. On the engineering side, the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear [Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013] or non-linear wrinkling [Efimenko2005, Guvendiren2010, Kim2011a, Brau2011]. Such patterns can be triggered by temperature dilation, swelling (eventually pH or light induced) or the removal of pre-strain. On the biology side, wrinkling-controlled morphogenesis is ubiquitous: ageing and the loss of elastic fibres makes our skin wrinkles, [bisset1987, genzer2005], difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts [savin2001, ciarletta2014, shyer2013], localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern [trejo2013, asally2012]. On the physics side, analogy with wrinkling have been found in situations where an effective substrate comes from the resistance to uniaxial stretching [Cerda2003], gravity [Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013] (linked to the pioneering work of Smoluchowski [Smoluchowski1927]), boundaries [Vandeparre2011a, Li2013] or adhesion [Vella2009a]. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity [Biot1957] or poroelasticity [Biot1964], leading to time-dependent kinetic wavelength selection. Stability analysis of a film on a thin viscous substrate was studied more recently [Huang2002] and remains theoretical since on a free interface gravity dominates over viscous substrate.
+There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate, the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength, as discovered originally in aeronautics~\cite{Gough1940, Bijlaard1946}. On the engineering side, the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or non-linear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation, swelling (eventually pH or light induced) or the removal of pre-strain. On the biology side, wrinkling-controlled morphogenesis is ubiquitous: ageing and the loss of elastic fibres makes our skin wrinkles~\cite{bisset1987, genzer2005}, difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{savin2001, ciarletta2014, shyer2013}, localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{trejo2013, asally2012}. On the physics side, analogy with wrinkling have been found in situations where an effective substrate comes from the resistance to uniaxial stretching~\cite{Cerda2003}, gravity~\cite{Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013} (linked to the pioneering work of Smoluchowski~\cite{Smoluchowski1927}), boundaries~\cite{Vandeparre2011a, Li2013} or adhesion~\cite{Vella2009a}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Stability analysis of a film on a thin viscous substrate was studied more recently~\cite{Huang2002} and remains theoretical since on a free interface gravity dominates over viscous substrate.
 
 
 
-Yet, in a biological context, membranes are immersed in a nearly buoyant medium (lymph, blood, mucus), a practical situation that could lead to wrinkling on a thin viscous substrate. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling [Ma2004,Longley2013]. Such interplay is also at stake in daily life problems such as wrinkles encountered while putting up wall paper [pacione1991].
+Yet, in a biological context, thin tissues (epithelimum, endothelium) are immersed in a nearly buoyant medium (lymph, blood, mucus), a practical situation that could lead to wrinkling on a thin viscous substrate. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling [Ma2004,Longley2013]. Such interplay is also at stake in daily life problems such as wrinkles encountered while putting up wall paper [pacione1991].
 
 
 
-Here, we have developed permeable model bio-gels that produce hierarchical wrinkling as a result of the interplay between its gelation dynamics and the confinement conditions. In slip geometry, we slowly acidify a dispersion of casein, one of the milk proteins.  As a result, not only did the casein form a gel as expected [leocmach2014] --this is a well know effect used in cheese or yogurt making, but, the gel started to produce wrinkling patterns in cascade when casein adhesion to the slit wall is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that, during the acidification, the casein network spontaneously shrink and swell at the micron level and wrinkles at the millimeter scale. We developed a model than pin down the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength, Poiseuille [poiseuille] flows of the solvent above and below the gel layer for long wavelengths and a new mechanism, Darcy [darcy] flows of the solvent through the gel layer for short wavelengths.
+Here, we have introduced permeable model bio-gels that produce hierarchical wrinkling as a result of the interplay between its gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of casein, one of the milk proteins.  As a result, not only does the casein form a gel as expected~\cite{leocmach2014} --this is a well know effect used in cheese or yogurt making, but, the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit wall is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that, during the acidification, the casein network spontaneously shrink and swell at the micron level and wrinkles at the millimeter scale. We developed a model than pin down the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength, Poiseuille~\cite{Poiseuille1842} flows of the solvent above and below the gel layer for long wavelengths and a new mechanism, Darcy~\cite{Darcy1856} flows of the solvent through the gel layer for short wavelengths.
 
 \begin{figure}
 	\includegraphics{dynamics}
@@ -49,9 +49,10 @@ Here, we have developed permeable model bio-gels that produce hierarchical wrink
 	\label{fig:dynamics}
 \end{figure}
 
+% § à déplacer après \section*{Pattern formation}, éventuellement en fusionnant des éléments avec le paragraphe précédent
 In the present work, we study the swelling-induced wrinkling of a porous gel sheet sandwiched between two viscous layers, with the whole system confined between two glass plates. As shown in Fig.~\ref{fig:dynamics}, the lateral confinement leads to saturation of the amplitude on the floor and ceiling followed by a cascade of secondary, ternary, etc. buckling. Such cascade buckling have been observed by~\cite{Roman1999} in a one dimensional macroscopic system, a sheet of steel forced to buckle. The 2D nature of our experiment creates nested patterns that could prove useful to design optical elements. In addition, one has to note that the primary wavelength is much smaller than the size of the system, implying that we are not in a simple buckling scenario but in a wrinkling instability. Our main goal is to identify the selection mechanism of the wavelength.
 
-
+% § à supprimer, ou à fusionner avec l'annonce de plan
 In the following, we will describe the physical chemistry that allows us to form such patterns. Then, we will model the situation and identify two possible selection mechanisms: either Darcy flow or Poiseuille flow. Finally we will compare our experimental data with the two models. Combining both Darcy and Poiseuille mechanisms will allow us to describe our data.
 
 \section*{Pattern formation}
@@ -61,6 +62,8 @@ In the following, we will describe the physical chemistry that allows us to form
 	\caption{Acid-induced protein gels properties behave non-monotonously with pH. (a) pH decrease in 4\%w sodium caseinate solution acidified by 4\%w GDL. Horizontal line indicates isoelectric pH of casen (b) Evolution of storage modulus measured in a rheometer (full adhesion to rotor and stator). (c) Evolution of pore size measured by confocal microscopy in a half coated microscopy cell (no adhesion to cell ceiling, syn\ae{}resis and swelling allowed).}
 	\label{fig:acidification}
 \end{figure}
+
+%discuter la figure 1c
 
 The slow acidification of a protein (sodium caseinate) solution down to the isoelectric pH induces gelation. Since caseins adsorb strongly to interfaces, the resulting gel sticks to container walls, allowing rheological measurements (see Fig.~\ref{fig:acidification}b). Further decrease of the pH beyond the isoeletric point weakens the gel. This non monotonous behaviour of the elastic modulus translates in a non monotonous mesh size in a microscopy cell (slit geometry) coated so that the casein could not adsorb on the top wall (Fig.~\ref{fig:acidification}c), i.e. in syn\ae{}resis (solvent expulsion) followed by swelling.
 
@@ -76,14 +79,15 @@ Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and
 
 \section*{Scalings}
 
-The characteristic length $\lambda^*$ of a wrinkling pattern is set by the competition between the flexural modulus of the sheet $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a lateral load $q$~\cite{Vella2009,Kolinski2009}: 
+The characteristic length $\lambda^*$ of a wrinkling pattern is set by the competition between the flexural modulus of the sheet $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a lateral load $\sigma_\perp$~\cite{Vella2009,Kolinski2009}: 
 \begin{equation}
-\lambda^* \sim h \left(\frac{B}{q}\right)^{1/3}.
+\lambda^* \sim h \left(\frac{B}{\sigma_\perp}\right)^{1/3}.
 \label{eq:lstar}
 \end{equation}
 In small deflection actual wavelength $\lambda$ is related to the amplitude $A$ as $\lambda \sim A^{1/4} \lambda^{*3/4}$.
 
-We identify three possible candidates for the lateral load $q$: the weight or buoyancy of the gel, the porous flow through the gel or the viscous flows in the surrounding water layers. We confirmed that the former was playing no role by successfully repeating our experiment in a cell held vertical, i.e. with the weight acting longitudinally rather than laterally.
+% Pour Mathieu : ajouter quelque part des applications numériques pour les trois longueurs d'ondes gravité, Darcy, Poiseuille
+We identify three possible candidates for the lateral load $\sigma_\perp$: the weight or buoyancy of the gel, the porous flow through the gel or the viscous flows in the surrounding water layers. We confirmed that the former was playing no role by successfully repeating our experiment in a cell held vertical, i.e. with the weight acting longitudinally rather than laterally.
 
 \begin{figure*}
 	\includegraphics{Darcy_vs_Poiseuille}
@@ -91,13 +95,13 @@ We identify three possible candidates for the lateral load $q$: the weight or bu
 	\label{fig:DarcyPoiseuille}
 \end{figure*}
 
-In a situation where the sheet of gel would be sitting (not sticking) to the floor of the cell ($H_1\rightarrow0$), creating a 2D blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law relates the gradient of pressure (identified to $q/h$) to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{q}{h} = \frac{dA}{dt}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
+In a situation where the sheet of gel would be sitting (not sticking) to the floor of the cell ($H_1\rightarrow0$), creating a 2D blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law relates the gradient of pressure (identified to $\sigma_\perp/h$) to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{\sigma_\perp}{h} = \frac{dA}{dt}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
 \begin{equation}
 \lambda_D \sim h^{1/2} \alpha^{1/4} \Upsilon^{1/4}
 \end{equation}
 where $\Upsilon = B\tau/\eta$ is a dimensionless viscoelastic factor quantifying the relative stiffness of the sheet and the solvent at a characteristic time $\tau$. This expression stresses the kinetic nature of the wavelength selection. However we note that the wavelength of (a generation of) the pattern does not evolve with time (see Fig.~\ref{fig:dynamics} and Sup. Fig.~\ref{fig:growth}) once the gel is touching both walls, we can deduce the relevant $\tau$ from the growth of the  pattern (see Supplementary Method for the precise definition).
 
-The opposite limiting case is when the sheet of gel is in the middle of the cell ($H_1=H_2$) and impervious ($\alpha\rightarrow 0$), destabilisation over a wavelength $\lambda$ creates a lubrication ($H\ll\lambda$) flow in the viscous layers. By symmetry the lateral load across the gel $q$ is also the pressure difference over the wavelength. Using a Poiseuille profile for the flow, $\frac{dA}{dt} \sim q \frac{H^3}{\eta\lambda^2}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Poiseuille mode as
+The opposite limiting case is when the sheet of gel is in the middle of the cell ($H_1=H_2$) and impervious ($\alpha\rightarrow 0$), destabilisation over a wavelength $\lambda$ creates a lubrication ($H\ll\lambda$) flow in the viscous layers. By symmetry the lateral load across the gel $\sigma_\perp$ is also the pressure difference over the wavelength. Using a Poiseuille profile for the flow, $\frac{dA}{dt} \sim \sigma_\perp \frac{H^3}{\eta\lambda^2}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Poiseuille mode as
 \begin{equation}
 \lambda_P \sim (hH)^{1/2} \Upsilon^{1/6}
 \end{equation}
@@ -118,7 +122,7 @@ The above models yield wavelengths of the same order in most of the cases we stu
 
 Our results are displayed in Fig.~\ref{fig:DarcyPoiseuille}. Neither model alone is able to reproduce all the data. However considering only the points where $H<H^*$ (respectively $H>H^*$), the Darcy (resp. Poiseuille) model fits the data well albeit with a prefactor. Note that it would be easy to oversight the failure of the Poiseuille model at small wavelength by adding an unexplained offset. Nonetheless, a complete model (derived in Supplementary Methods), summing up the influence of both Poiseuille and Darcy dissipation shows a better agreement for all values of $H/H^*$.
 
-
+%Conclusion à écrire
 
 \section*{Methods summary}
 To prevent adsorption of caseins to surfaces, microscope slides and cover-slips were cleaned and subsequently coated with a silane agent (3-(trimethoxysilyl) propyl methacrylate, Sigma Aldrich) to which a polyacrylamide brush was polymerized from methacrylate groups.
@@ -192,7 +196,7 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 
 \begin{figure}
 	\includegraphics{mesh}
-	\caption{Gel microstructure. (a) Detail of a confocal micrograph of a 4\%w casein, 4\%w GDL in water, when only the slide is coated (not the cover slip). Time corresponds to the minimum in mesh size. Scale bar is \SI{10}{\micro\metre}. (b) Corresponding radial averaged Fourier transform. Black line is the best fit by Eq.XXX with $\xi=\SI{4.9}{\micro\metre}$ and $\gamma=2.4$. Inset shows the center of the non radial average spectrum (arbitrary logarithmic color scale). Scale bar is \SI{10}{\per\micro\metre}. (c-d) Idem in a 50\%w glycerol solvent, with $\xi=\SI{1.5}{\micro\metre}$ and $\gamma=2.5$.}
+	\caption{Gel microstructure. (a) Detail of a confocal micrograph of a 4\%w casein, 4\%w GDL in water, when only the slide is coated (not the cover slip). Time corresponds to the minimum in mesh size. Scale bar is \SI{10}{\micro\metre}. (b) Corresponding radial averaged Fourier transform. Black line is the best fit by Eq.XXX with $\xi=\SI{2.0}{\micro\metre}$ and $d_{3D}=2.27$. Inset shows the center of the non radial average spectrum (arbitrary logarithmic color scale). Scale bar is \SI{10}{\per\micro\metre}. (c-d) Idem in a 50\%w glycerol solvent, with $\xi=\SI{0.3}{\micro\metre}$ and $d_{3D}=3$.}
 	\label{fig:mesh}
 \end{figure}
 
@@ -245,29 +249,29 @@ We note that when both measurements were available (as in Fig.~\ref{fig:growth}a
 
 \subsection*{Darcy+Poiseuille model}
 
-Mechanical equilibrium of a plate of thickness $h$, young modulus $E$ and Poisson ratio $\nu$ submitted to a compression load $\sigma_0$ along $x$ and a lateral load $q$ along $z$ writes:
+Mechanical equilibrium of a plate of thickness $h$, young modulus $E$ and Poisson ratio $\nu$ submitted to a compression load $\sigma_\parallel$ along $x$ and a lateral load $\sigma_\perp$ along $z$ writes:
 \begin{equation}
-\frac{E h^3}{12(1-\nu^2)}\frac{\partial^4 w}{\partial x^4} + \sigma_0 h \frac{\partial^2 w}{\partial x^2} = q,
+\frac{E h^3}{12(1-\nu^2)}\frac{\partial^4 w}{\partial x^4} + \sigma_\parallel h \frac{\partial^2 w}{\partial x^2} = \sigma_\perp,
 \label{eq:mecheq}
 \end{equation}
 where $w(x,t)$ is the deflection of the plate along $z$.
 
 We suppose an exponentially growing sinusoidal deflection $w(x,t) =  A_0 e^{t/\tau} \sin kx$ of characteristic time $\tau$ and wavevector $k$. In operator language, Eq.~\ref{eq:mecheq} writes:
 \begin{equation}
-\left(\frac{1}{12} B h^3 k^4 - \sigma_0 h k^2\right)w = q,
+\left(\frac{1}{12} B h^3 k^4 - \sigma_\parallel h k^2\right)w = \sigma_\perp,
 \label{eq:mecheqop}
 \end{equation}
 where $B=E/(1-\nu^2)$ is the modulus of the plate.
 
 \subsubsection*{Elastic film in an infinite elastic medium}
 
-The deformation of the substrate of modulus $B_s$ gives the lateral load as $q = -k B_s w$, and thus the compression load writes
+The deformation of the substrate of modulus $B_s$ gives the lateral load as $\sigma_\perp = -k B_s w$, and thus the compression load writes
 \begin{equation}
-\sigma_0 = B \frac{h^2}{12} k^2 + \frac{B_s}{hk}.
+\sigma_\parallel = B \frac{h^2}{12} k^2 + \frac{B_s}{hk}.
 \label{eq:sigma0}
 \end{equation}
 
-Minimizing $\sigma_0$ function of $k$ yield the well known~\cite{Biot1957,Cerda2003} result $hk = \left(6B_s/B\right)^{1/3}$ and thus the dominant wavelength is
+Minimizing $\sigma_\parallel$ function of $k$ yield the well known~\cite{Biot1957,Cerda2003} result $hk = \left(6B_s/B\right)^{1/3}$ and thus the dominant wavelength is
 \begin{equation}
 \lambda_d = 2\pi h \left(\frac{B}{6B_s}\right)^{1/3}.
 \label{eq:lambdaElEl}
@@ -288,13 +292,13 @@ Mass conservation writes
 \end{equation}
 Keeping only linear order terms, in operator language
 \begin{equation}
-\frac{12\eta}{\tau} \frac{w}{H^3k^2} = -q.
+\frac{12\eta}{\tau} \frac{w}{H^3k^2} = -\sigma_\perp.
 \label{eq:PoiseuilleLoad}
 \end{equation}
 
 Combining Eqs.~(\ref{eq:mecheqop}) and (\ref{eq:PoiseuilleLoad}), the compression load writes
 \begin{equation}
-\sigma_0 = \frac{1}{12}B h^2 k^2 + 12\frac{\eta}{\tau}\frac{1}{H^3 h k^4}
+\sigma_\parallel = \frac{1}{12}B h^2 k^2 + 12\frac{\eta}{\tau}\frac{1}{H^3 h k^4}
 \label{eq:sigma0P}
 \end{equation}
 and can be minimised by $k_P$ such that
@@ -315,13 +319,13 @@ The scaling is then identical to the (much more involved) derivation by \citet{H
 \subsubsection*{Porous elastic film with no possible Poiseuille flow}
 The lateral load derives from the Darcy law through the film of permeability $\alpha$:
 \begin{equation}
--q = p_2-p_1 = \frac{h\eta}{\alpha}\frac{\partial w}{\partial t}.
+-\sigma_\perp = p_2-p_1 = \frac{h\eta}{\alpha}\frac{\partial w}{\partial t}.
 \label{eq:DarcyLoad}
 \end{equation}
 
 Combining Eqs.~(\ref{eq:mecheqop}) and (\ref{eq:DarcyLoad}), the compression load writes
 \begin{equation}
-\sigma_0 = \frac{1}{12}B h^2 k^2 + \frac{\eta}{\tau}\frac{1}{\alpha k^2}
+\sigma_\parallel = \frac{1}{12}B h^2 k^2 + \frac{\eta}{\tau}\frac{1}{\alpha k^2}
 \label{eq:sigma0D}
 \end{equation}
 and can be minimised by $k_D$ such that
@@ -357,7 +361,7 @@ v = \frac{\alpha}{\eta} \frac{p_1-p_2}{h}.
 
 Combining Eqs.~(\ref{eq:pressures}, \ref{eq:conservationDarcy}, \ref{eq:Darcy}) we obtain the lateral load
 \begin{equation}
-q = p_1-p_2 = - \frac{\eta}{\tau} \frac{w}{\frac{H^3 k^2}{12} + \frac{\alpha}{h}},
+\sigma_\perp = p_1-p_2 = - \frac{\eta}{\tau} \frac{w}{\frac{H^3 k^2}{12} + \frac{\alpha}{h}},
 \label{eq:MixtLoad}
 \end{equation}
 
@@ -366,9 +370,9 @@ Note that we recover Eq~(\ref{eq:PoiseuilleLoad}) when $\alpha \rightarrow 0$ an
 H^* = 2^{2/3} 3^{1/6} \alpha^{1/2} \Upsilon^{1/6}.
 \end{equation}
 
-Analytic minimisation of $\sigma_0$ knowing $q$ is possible but heavy. Instead we rewrite Eq.~(\ref{eq:mecheqop}) in terms of previously calculated $\lambda_P$ and $\lambda_D$:
+Analytic minimisation of $\sigma_\parallel$ knowing $\sigma_\perp$ is possible but heavy. Instead we rewrite Eq.~(\ref{eq:mecheqop}) in terms of previously calculated $\lambda_P$ and $\lambda_D$:
 \begin{align}
-\frac{12\sigma_0}{k_D^2 h^2 B} &= \left(\frac{k}{k_D}\right)^2 + \frac{1}{2\frac{k_D^2}{k_P^6}k^4  + \left(\frac{k}{k_D}\right)^2}\\
+\frac{12\sigma_\parallel}{k_D^2 h^2 B} &= \left(\frac{k}{k_D}\right)^2 + \frac{1}{2\frac{k_D^2}{k_P^6}k^4  + \left(\frac{k}{k_D}\right)^2}\\
 &= \left(\frac{\lambda_D}{\lambda}\right)^2 + \frac{1}{2\frac{\lambda_P^6}{\lambda_D^2\lambda^4}  + \left(\frac{\lambda_D}{\lambda}\right)^2}
 \end{align}
 and we minimise this expression numerically.
