--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -33,15 +33,15 @@ amsmath,amssymb,prl]{revtex4-1}
 \maketitle
 
 \section*{Introduction}
-There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate, the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength, as discovered originally in aeronautics~\cite{Gough1940, Bijlaard1946}. On the engineering side, the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or non-linear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation, swelling (eventually pH or light induced) or the removal of pre-strain. On the biology side, wrinkling-controlled morphogenesis is ubiquitous: ageing and the loss of elastic fibres makes our skin wrinkles~\cite{bisset1987, genzer2005}, difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{savin2001, ciarletta2014, shyer2013}, localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{trejo2013, asally2012}. On the physics side, analogy with wrinkling have been found in situations where an effective substrate comes from the resistance to uniaxial stretching~\cite{Cerda2003}, gravity~\cite{Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013} (linked to the pioneering work of Smoluchowski~\cite{Smoluchowski1927}), boundaries~\cite{Vandeparre2011a, Li2013} or adhesion~\cite{Vella2009a}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Stability analysis of a film on a thin viscous substrate was studied more recently~\cite{Huang2002} and remains theoretical since on a free interface gravity dominates over viscous substrate.
+There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate, the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength, as discovered originally in aeronautics~\cite{Gough1940, Bijlaard1946}. On the engineering side, the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or non-linear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation, swelling (eventually pH or light induced) or the removal of pre-strain. On the biology side, wrinkling-controlled morphogenesis is ubiquitous: ageing and the loss of elastic fibres makes our skin wrinkles~\cite{Bissett1987, Genzer2006}, difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}, localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side, analogy with wrinkling have been found in situations where an effective substrate comes from the resistance to uniaxial stretching~\cite{Cerda2003}, gravity~\cite{Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013} (linked to the pioneering work of Smoluchowski~\cite{Smoluchowski1927}), boundaries~\cite{Vandeparre2011a, Li2013} or adhesion~\cite{Vella2009a}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Stability analysis of a film on a thin viscous substrate was studied more recently~\cite{Huang2002} and remains theoretical since on a free interface gravity dominates over viscous substrate.
 
 
 
-Yet, in a biological context, thin tissues (epithelimum, endothelium) are immersed in a nearly buoyant medium (lymph, blood, mucus), a practical situation that could lead to wrinkling on a thin viscous substrate. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling [Ma2004,Longley2013]. Such interplay is also at stake in daily life problems such as wrinkles encountered while putting up wall paper [pacione1991].
+Yet, in a biological context, thin tissues (epithelimum, endothelium) are immersed in a nearly buoyant medium (lymph, blood, mucus), a practical situation that could lead to wrinkling on a thin viscous substrate. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}. Such interplay is also at stake in daily life problems such as wrinkles encountered while putting up wall paper~\cite{Pacione1991}.
 
 
 
-Here, we have introduced permeable model bio-gels that produce hierarchical wrinkling as a result of the interplay between its gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of casein, one of the milk proteins.  As a result, not only does the casein form a gel as expected~\cite{leocmach2014} --this is a well know effect used in cheese or yogurt making, but, the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit wall is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that, during the acidification, the casein network spontaneously shrink and swell at the micron level and wrinkles at the millimeter scale. We developed a model than pin down the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength, Poiseuille~\cite{Poiseuille1842} flows of the solvent above and below the gel layer for long wavelengths and a new mechanism, Darcy~\cite{Darcy1856} flows of the solvent through the gel layer for short wavelengths.
+Here, we have introduced permeable model bio-gels that produce hierarchical wrinkling as a result of the interplay between its gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of casein, one of the milk proteins.  As a result, not only does the casein form a gel as expected~\cite{Leocmach2014} --this is a well know effect used in cheese or yogurt making, but, the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit wall is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that, during the acidification, the casein network spontaneously shrink and swell at the micron level and wrinkles at the millimeter scale. We developed a model than pin down the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength, Poiseuille~\cite{Poiseuille1842} flows of the solvent above and below the gel layer for long wavelengths and a new mechanism, Darcy~\cite{Darcy1856} flows of the solvent through the gel layer for short wavelengths.
 
 \begin{figure}
 	\includegraphics{dynamics}
