slide sur Tsurusawa orientée breaking

--- a/seminaire_Montpellier.tex
+++ b/seminaire_Montpellier.tex
@@ -159,6 +159,10 @@ red!40!yellow,
 	\end{frame}
 }
 
+\begin{frame}[plain]
+	\titlepage
+\end{frame}
+
 \setcounter{framenumber}{0}
 
 \include{parcourt}
