Schéma en (d) Réorganise les notations pour plus de clarté

--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -38,7 +38,7 @@
 \begin{figure}
 	\tikzsetnextfilename{sideview}
 	\input{fig_plis/sideview.pgf}
-	\caption{Modelisation  and measurements. (a) Schematic side view of the cell. The constant thickness gel sheet (orange) is surrounded by water. Yellow lines show the path of transmitted light through the gel phase. A region of interest is highlighted in gray. (b) Confocal XZ cuts showing syn\ae{}resis, swelling and (cascade) wrinkling. Scale bar is \SI{100}{\micro\metre} (real size ratio). Evolution of (c) volume of the gel phase relative to cell volume and (d) excess area measured by confocal microscopy.}
+	\caption{Modelisation  and measurements. (a) Confocal XZ cuts showing syn\ae{}resis, swelling and (cascade) wrinkling. Scale bar is \SI{100}{\micro\metre} (real size ratio). Evolution of (b) volume of the gel phase relative to cell volume and (c) excess area measured by confocal microscopy. Crosses correspond to times of (a) (d) Schematic side view of the cell. The constant thickness gel sheet (orange) is surrounded by water. Yellow lines show the path of transmitted light through the gel phase. A region of interest is highlighted in gray.}
 	\label{fig:sideview}
 \end{figure}
 
