--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -70,4 +70,11 @@
 	\label{fig:growth}
 \end{figure}
 
+\begin{figure*}
+	\tikzsetnextfilename{patterns}
+	\input{fig_plis/patterns.pgf}
+	\caption{Patterns corresponding to the samples of Table~\ref{tab:data}. (a-d) increasing cell thickness. (e-f) larger solid content. (g-i) increasing glycerol content. All pictures are stitching of fluorescent microscopy images except (c,e) which are details of reflected light macroscope images. Scale is common to all panels (scale bar \SI{1}{\milli\metre}). Length of arrows correspond to the measured primary wavelength.}
+	\label{fig:patterns}
+\end{figure*}
+
 \end{document}
